fix(style): link color and wrap style

--- a/assets/css/_mixin/_compatibility.scss
+++ b/assets/css/_mixin/_compatibility.scss
@@ -90,3 +90,9 @@
   word-wrap: $value;
   overflow-wrap: $value;
 }
+
+@mixin line-break($value) {
+  -webkit-line-break: $value;
+  -ms-line-break: $value;
+  line-break: $value;
+}
